<resources>
    <string name="app_name">C2-Prak2-13020200252</string>
    <string name="masukkan_stambuk">Masukkan Stambuk</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="program_studi">Program Studi</string>
    <string name="teknik_informatika">Teknik Informatika</string>
    <string name="sistem_informasi">Sistem Informasi</string>
    <string name="minat">Minat</string>
    <string name="badan_eksekutif_mahasiswa">Badan Eksekutif Mahasiswa</string>
    <string name="karya_tulis_ilmiah">Penulisan Karya Ilmiah</string>
    <string name="wirausaha">Kewirausahaan</string>
    <string name="kesenian">Kesenian</string>
    <string name="jurnalis">Jurnalistik</string>
    <string name="olahraga">Olahraga</string>
    <string name="tampilkan_ringkasan">Tampilkan Ringkasan</string>
    <string name="ringkasan_data">Ringkasan Data</string>
    <string name="stambuk">Stambuk</string>
    <string name="nama">Nama</string>
    <string name="angkatan">Angkatan</string>
    <string name="result">result</string>
</resources>