<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_stb"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/masukkan_stambuk"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_nama"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColorHint="#8D6E63"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:hint="@string/masukkan_nama"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@id/et_stb"
        app:layout_constraintTop_toBottomOf="@id/et_stb"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/sp_angkatan"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/et_nama"
        app:layout_constraintTop_toBottomOf="@id/et_nama" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/program_studi"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/sp_angkatan"
        app:layout_constraintTop_toBottomOf="@id/sp_angkatan"/>

    <RadioGroup
        android:id="@+id/rg_prodi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tv1"
        app:layout_constraintTop_toBottomOf="@id/tv1">

        <RadioButton
            android:id="@+id/rb_informatika"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teknik_informatika" />

        <RadioButton
            android:id="@+id/rb_informasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/sistem_informasi" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/minat"
        app:layout_constraintStart_toStartOf="@id/rg_prodi"
        app:layout_constraintTop_toBottomOf="@id/rg_prodi"/>

    <CheckBox
        android:id="@+id/cb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/badan_eksekutif_mahasiswa"
        app:layout_constraintStart_toStartOf="@id/tv2"
        app:layout_constraintTop_toBottomOf="@id/tv2"/>

    <CheckBox
        android:id="@+id/cb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/karya_tulis_ilmiah"
        app:layout_constraintStart_toStartOf="@id/cb1"
        app:layout_constraintTop_toBottomOf="@id/cb1"/>

    <CheckBox
        android:id="@+id/cb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wirausaha"
        app:layout_constraintStart_toStartOf="@id/cb2"
        app:layout_constraintTop_toBottomOf="@id/cb2"/>

    <CheckBox
        android:id="@+id/cb4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kesenian"
        app:layout_constraintStart_toStartOf="@id/cb3"
        app:layout_constraintTop_toBottomOf="@id/cb3"/>

    <CheckBox
        android:id="@+id/cb5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jurnalis"
        app:layout_constraintStart_toStartOf="@id/cb4"
        app:layout_constraintTop_toBottomOf="@id/cb4"/>

    <CheckBox
        android:id="@+id/cb6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olahraga"
        app:layout_constraintStart_toStartOf="@id/cb5"
        app:layout_constraintTop_toBottomOf="@id/cb5"/>

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:onClick="onClick"
        android:text="@string/tampilkan_ringkasan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb6"/>

</androidx.constraintlayout.widget.ConstraintLayout>