<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ringkasan_data"
        android:textStyle="bold"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/stambuk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv1" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv2"
        app:layout_constraintTop_toBottomOf="@id/tv2"/>

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/angkatan"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv3"
        app:layout_constraintTop_toBottomOf="@id/tv3"/>

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/program_studi"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv4"
        app:layout_constraintTop_toBottomOf="@id/tv4"/>

    <TextView
        android:id="@+id/tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minat"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv5"
        app:layout_constraintTop_toBottomOf="@id/tv5"/>

    <TextView
        android:id="@+id/rs1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        app:layout_constraintStart_toEndOf="@+id/tv2"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <TextView
        android:id="@+id/rs2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        app:layout_constraintStart_toEndOf="@+id/tv3"
        app:layout_constraintTop_toBottomOf="@+id/rs1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/rs3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        app:layout_constraintStart_toStartOf="@+id/rs2"
        app:layout_constraintTop_toBottomOf="@+id/rs2" />

    <TextView
        android:id="@+id/rs4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        app:layout_constraintStart_toStartOf="@+id/rs3"
        app:layout_constraintTop_toBottomOf="@+id/rs3" />

    <TextView
        android:id="@+id/rs5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        app:layout_constraintStart_toStartOf="@+id/rs4"
        app:layout_constraintTop_toBottomOf="@+id/rs4" />

</androidx.constraintlayout.widget.ConstraintLayout>